@@ -154,6 +154,23 @@ func TestTriggerBuilder(t *testing.T) {
 		}
 		assert.DeepEqual(t, expected, b.Build().Spec.Filter)
 	})
+
+	t.Run("add and remove inject annotation", func(t *testing.T) {
+		b := NewTriggerBuilder("broker-trigger")
+		b.InjectBroker(true)
+		expected := &metav1.ObjectMeta{
+			Annotations: map[string]string{
+				v1alpha1.InjectionAnnotation: "enabled",
+			},
+		}
+		assert.DeepEqual(t, expected.Annotations, b.Build().ObjectMeta.Annotations)
+
+		b = NewTriggerBuilderFromExisting(b.Build())
+		b.InjectBroker(false)
+		assert.DeepEqual(t, make(map[string]string), b.Build().ObjectMeta.Annotations)
+
+	})
+
 }
 
 func newTrigger(name string) *v1alpha1.Trigger {
